# scriptproxymcp

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  pyproject.toml  pytest.out  test_closure.py  test_fastmcp_closure.out  test_fastmcp_closure.py  test_mcp_client.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml  opencode.yml  release.yml
demo/: mcpproxy.md
demo/arithmeticmcp/: add.sh  basic_arithmetic.md  divide.sh  mcpproxy.md  multiply.sh  power.sh  subtract.sh
demo/luxuspythonstack/: mcpproxy.md
demo/luxuspythonstack/luxus-python-stack/references/: daily-commands.md  luxus-python-stack.md
demo/luxuspythonstack/luxus-python-stack/scripts/: pyinit.sh
demo/luxuspythonstack/skill_luxuspythonstack/: SKILL.md
demo/luxuspythonstack/skill_luxuspythonstack/references/: luxus-python-stack.md
demo/skill_luxuspythonstack/: SKILL.md
demo/skill_luxuspythonstack/references/: luxus-python-stack.md
demo/ubuntuadminmcp/: askpasscheck.sh  mcpproxy.md  systeminfo.sh  systemlogs.sh
plans/: architecture-fix.md  skill-resources-design.md  skill-scripts-as-tools.md
src/scriptproxymcp/: __init__.py  askpass_gui.py  datatypes.py  main.py  scriptexecute.py  scriptfolder.py  server.py  skillfolder.py
tests/: __init__.py  test_askpass_gui.py  test_placeholder.py  test_scriptexecute.py  test_scriptfolder.py  test_server.py  test_server_functions.py
