[project]
name = "scriptproxymcp"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Frank Bloecher", email = "frankbloecher@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
]

[project.scripts]
scriptproxymcp = "scriptproxymcp.server:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "basedpyright>=0.1.0",
    "colorlog>=6.8.2",
    "bump-my-version>=0.20.0",
    "pre-commit>=4.3.0",
]

[tool.bumpversion]
current_version = "0.3.0"
commit = true
tag = true
message = "chore: bump version from {current_version} to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]
